--- a/src/translations/id.json
+++ b/src/translations/id.json
@@ -25,5 +25,31 @@
     "acs_taskd_documentlbl":"Dokumen terkait",
     "acs_taskd_info":"Informasi",
     "acs_taskd_examinfo":"Maksimal pengerjaan kuis adalah (__EXAM_MAXDURATION__) kuis akan tersimpan saat anda sudah menyelesaikan semua soal",
-    "acs_taskd_btncancel":"Batal"
+    "acs_taskd_btncancel":"Batal",
+
+    "acs_exam_title":"Kuis",
+    "acs_exam_btnnext":"Lanjut",
+    "acs_exam_btnprev":"Sebelumnya",
+    "acs_exam_question":"Pertanyaan",
+    "acs_exam_answer":"Jawaban",
+    "acs_exam_btnfinish":"Selesai",
+    "acs_exam_dlgfinish":"Terimakasih telah mengerjakan quiz dengan benar, klik ok untuk meng akhiri quiz",
+
+    "acs_btmnav_Home":"Home",
+    "acs_btmnav_Favourites":"Favorit",
+    "acs_btmnav_Public":"Publik",
+    "acs_btmnav_Related":"Terkait",
+    "acs_btmnav_MyTask":"Tugas",
+
+    "acs_sort_asc_effdate":"(A-Z) Tanggal Berlaku ",
+    "acs_sort_dsc_effdate":"(Z-A) Tanggal Berlaku",
+    "acs_sort_asc_docnum":"(A-Z) Nomor Dokumen",
+    "acs_sort_dsc_docnum":"(Z-A) Nomor Dokumen",
+    "acs_sort_asc_docname":"(A-Z) Nama Dokumen",
+    "acs_sort_dsc_docname":"(Z-A) Nama Dokumen",
+
+    "lbl_serc_home":"Cari dokumen saya",
+    "lbl_serc_fav":"Cari dokumen favorit",
+    "lbl_serc_pub":"Cari dokumen publik",
+    "lbl_serc_rel":"Cari dokumen terkait"
 }
